erDiagram
    Organization ||--o{ Organization : "parent (HQ->Branch)"
    Organization ||--o{ User : "belongs to"
    Organization ||--o{ Building : "manages"
    Organization ||--o{ Project : "manages"
    Building ||--o{ Floor : "has"
    Building ||--o{ Project : "target"
    Building ||--o{ ElementFloorMapping : "contains"
    Floor ||--o{ Issue : "located on"
    Floor ||--o{ ElementFloorMapping : "mapped to"
    Project ||--o{ Issue : "contains"
    Issue ||--o{ Photo : "attached"
    Issue ||--o{ StatusChangeLog : "history"
    User ||--o{ Issue : "reported by"
    User ||--o{ Issue : "assigned to"
    User ||--o{ StatusChangeLog : "changed by"

    Organization {
        uuid organization_id PK
        string name
        string type "Headquarters / Branch"
        uuid parent_id FK "nullable - HQ is null"
        datetime created_at
        datetime updated_at
    }

    User {
        uuid user_id PK
        uuid organization_id FK
        string name
        string email "unique"
        string role "Admin / Supervisor / Worker"
        boolean is_active
        datetime created_at
        datetime updated_at
    }

    Building {
        uuid building_id PK
        uuid branch_id FK "Organization (Branch)"
        string name
        string address
        decimal latitude
        decimal longitude
        string model_urn "APS BIM URN"
        datetime created_at
        datetime updated_at
    }

    Floor {
        uuid floor_id PK
        uuid building_id FK
        string name "e.g. 1F, B1F, RF"
        int floor_number "sort order"
        decimal elevation "nullable - mm, estimated from BoundingBox Z"
        datetime created_at
        datetime updated_at
    }

    Project {
        uuid project_id PK
        uuid branch_id FK "Organization (Branch)"
        uuid building_id FK
        string name
        text plan "project plan (free text)"
        date start_date
        date due_date
        string status "Planning / Active / Completed"
        datetime created_at
        datetime updated_at
    }

    Issue {
        uuid issue_id PK
        uuid project_id FK
        uuid floor_id FK
        string title
        text description
        string issue_type "Quality / Safety / Construction / Design"
        string status "PointOut / Open / InProgress / Done / Confirmed"
        string location_type "DbId / WorldPosition"
        int db_id "nullable - Viewer element ID"
        decimal world_position_x "nullable"
        decimal world_position_y "nullable"
        decimal world_position_z "nullable"
        uuid reported_by FK "User"
        uuid assignee_id FK "nullable - User"
        date due_date "nullable"
        datetime created_at
        datetime updated_at
    }

    Photo {
        uuid photo_id PK
        uuid issue_id FK
        string blob_key "storage path"
        string photo_phase "Before / After / Rejection"
        datetime uploaded_at
    }

    StatusChangeLog {
        uuid log_id PK
        uuid issue_id FK
        string from_status
        string to_status
        uuid changed_by FK "User"
        text comment "nullable - required on rejection"
        datetime changed_at
    }

    ElementFloorMapping {
        uuid building_id PK "composite PK"
        int db_id PK "composite PK - Viewer element ID"
        uuid floor_id FK
        decimal bounding_box_min_z "for debug"
        datetime created_at
        datetime updated_at
    }
